# zelos-extension-oscilloscope

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.schema.json  extension.toml  main.py  pyproject.toml
tests/: test_extension.py
zelos_extension_oscilloscope/: __init__.py  extension.py
zelos_extension_oscilloscope/utils/: __init__.py
